# ROV2026

./: .gitignore  .gitmodules  Doxyfile  EKF__sensor__fusion__controller_8hpp.html  EKF__sensor__fusion__controller_8hpp_source.html  EKF__sensor__fusion__controller__cleaned_8hpp.html  EKF__sensor__fusion__controller__cleaned_8hpp_source.html  LICENSE  README.md  _formulas.tex  _formulas_dark.tex  annotated.html  annotated_dup.js  axis__to__command__controller_8hpp.html  axis__to__command__controller_8hpp.js  axis__to__command__controller_8hpp__incl.map  axis__to__command__controller_8hpp__incl.md5  axis__to__command__controller_8hpp_source.html  classGamepadParser-members.html  classGamepadParser.html  classGamepadParser.js  classGamepadParser__coll__graph.map  classes.html  classrov__control_1_1PWMInterface-members.html  classrov__control_1_1PWMInterface.html  classrov__control_1_1PWMInterface.js  classrov__control_1_1ThrusterHardwareInterface__inherit__graph.map  classrov__control_1_1ThrusterHardwareInterface__inherit__graph.md5  classrov__controllers_1_1AxisToCommandController-members.html  classrov__controllers_1_1AxisToCommandController.html  classrov__controllers_1_1AxisToCommandController.js  classrov__controllers_1_1AxisToCommandController__inherit__graph.map  classrov__controllers_1_1PidController-members.html  classrov__controllers_1_1PidController.html  classrov__controllers_1_1PidController.js  classrov__controllers_1_1PidController__inherit__graph.map  classrov__controllers_1_1PidController__inherit__graph.md5  dir_1221e203e50e6cd6e1d25f90da979ab2.html  dir_1221e203e50e6cd6e1d25f90da979ab2.js  dir_4d9e6af0123971837824dfe4e67503a9.html  (+47 more)
.github/workflows/: deploy-docs.yml
doxygen/html/: annotated.html  axis__to__command__controller_8hpp.html  axis__to__command__controller_8hpp__incl.md5  axis__to__command__controller_8hpp_source.html  classGamepadParser-members.html  classGamepadParser.html  classGamepadParser__inherit__graph.md5  classes.html  classrov__control_1_1PWMInterface-members.html  classrov__control_1_1PWMInterface.html  classrov__control_1_1PWMInterface__coll__graph.map  classrov__control_1_1PWMInterface__inherit__graph.md5  classrov__control_1_1ThrusterHardwareInterface-members.html  classrov__controllers_1_1AxisToCommandController-members.html  classrov__controllers_1_1AxisToCommandController.html  classrov__controllers_1_1AxisToCommandController__inherit__graph.md5  classrov__controllers_1_1PidController-members.html  classrov__controllers_1_1PidController.html  classrov__controllers_1_1PidController.js  classrov__controllers_1_1PidController__coll__graph.md5  classrov__controllers_1_1PidController__inherit__graph.map  dir_1221e203e50e6cd6e1d25f90da979ab2.html  dir_1221e203e50e6cd6e1d25f90da979ab2_dep.md5  dir_4d9e6af0123971837824dfe4e67503a9.html  dir_4d9e6af0123971837824dfe4e67503a9_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d529950bd809127c82dd21a158f9c8ee.html  dir_d529950bd809127c82dd21a158f9c8ee_dep.map  dir_d529950bd809127c82dd21a158f9c8ee_dep.md5  files.html  functions_func.html  functions_vars.html  gamepad__parser__node_8hpp.html  gamepad__parser__node_8hpp.js  gamepad__parser__node_8hpp__incl.md5  globals.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  (+15 more)
doxygen/latex/: annotated.tex  axis__to__command__controller_8hpp.tex  axis__to__command__controller_8hpp__incl.md5  axis__to__command__controller_8hpp_source.tex  classGamepadParser.tex  classGamepadParser__coll__graph.md5  classrov__control_1_1PWMInterface.tex  classrov__control_1_1PWMInterface__inherit__graph.md5  classrov__control_1_1ThrusterHardwareInterface__coll__graph.md5  classrov__controllers_1_1AxisToCommandController.tex  classrov__controllers_1_1AxisToCommandController__coll__graph.md5  files.tex  (+24 more)
html/: annotated.html  classes.html  classrov__control_1_1ThrusterHardwareInterface.html  dir_1221e203e50e6cd6e1d25f90da979ab2.html  dir_1221e203e50e6cd6e1d25f90da979ab2_dep.map  dir_4d9e6af0123971837824dfe4e67503a9.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d529950bd809127c82dd21a158f9c8ee.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherits.html  thruster__interface_8hpp_source.html
install/: local_setup.sh  setup.sh
latex/: annotated.tex  classrov__control_1_1ThrusterHardwareInterface.tex  files.tex  hierarchy.tex  refman.aux  refman.idx  refman.tex  thruster__interface_8hpp_source.tex
log/: latest_build  latest_list  latest_test
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_7.js  functions_b.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_b.js  variables_d.js  (+1 more)
src/rov_control/: CMakeLists.txt  package.xml
src/rov_control/config/: control_parameters.yaml
src/rov_control/include/rov_control/: EKF_sensor_fusion_controller.hpp  EKF_sensor_fusion_controller_cleaned.hpp  axis_to_command_controller.hpp  driver_pca9685_interface.h  gamepad_parser_node.hpp  pwm_interface.hpp  thruster_interface.hpp  thruster_pid_controller.hpp
src/rov_control/include/rov_control/libdriver_pca9685/: driver_pca9685.h
src/rov_control/launch/: rov_control_launch.py  rov_control_launch_test.py
src/rov_control/plugins/: axis_to_command_controller_plugin.xml  pwm_interface_plugin.xml  thruster_pid_controller_plugin.xml
src/rov_control/src/: EKF_sensor_fuser.cpp  axis_to_command_controller.cpp  bar100_sensor.py  gamepad_parser_node.cpp  pressure_sensor_interface.py  pwm_interface.cpp  thruster_interface.cpp  thruster_pid_controller.cpp
src/rov_control/src/libdriver_pca9685/interface/: driver_pca9685_interface.c
src/rov_control/src/libdriver_pca9685/src/: driver_pca9685.c
(+122 files in other folders)
